test/spec_vectors/f32_cmp/fail/module_2.wat
(module (func (result f32) (f32.ge (i64.const 0) (f64.const 0))))